# fastxm

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python/i1d/: __init__.py
src/: lib.rs
tests/: test_i1d.py
